--- a/KeepFit.Backend.Domain/KeepFit.Backend.Domain.csproj
+++ b/KeepFit.Backend.Domain/KeepFit.Backend.Domain.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.TestPlatform.TestHost" Version="17.11.1" />
+    </ItemGroup>
+
 </Project>
