--- a/KeepFit.Backend.MSTest/KeepFit.Backend.MSTest.csproj
+++ b/KeepFit.Backend.MSTest/KeepFit.Backend.MSTest.csproj
@@ -5,13 +5,19 @@
         <LangVersion>latest</LangVersion>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <IsPackable>false</IsPackable>
+        <IsTestProject>true</IsTestProject>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="15.0.1" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
         <PackageReference Include="Moq" Version="4.20.72" />
-        <PackageReference Include="MSTest" Version="3.6.1" />
+
+        <PackageReference Include="MSTest.TestAdapter" Version="3.6.1" />
+        <PackageReference Include="MSTest.TestFramework" Version="3.6.1" />
+
+        <PackageReference Include="coverlet.collector" Version="6.0.2" />
     </ItemGroup>
 
     <ItemGroup>
@@ -19,8 +25,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\KeepFit.Backend.Application\KeepFit.Backend.Application.csproj" />
-      <ProjectReference Include="..\KeepFit.Backend.Domain\KeepFit.Backend.Domain.csproj" />
+        <ProjectReference Include="..\KeepFit.Backend.Application\KeepFit.Backend.Application.csproj" />
+        <ProjectReference Include="..\KeepFit.Backend.Domain\KeepFit.Backend.Domain.csproj" />
     </ItemGroup>
 
 </Project>
